/*
Copyright 2019 The Alcor Authors.

Licensed under the Apache License, Version 2.0 (the "License");
        you may not use this file except in compliance with the License.
        You may obtain a copy of the License at

        http://www.apache.org/licenses/LICENSE-2.0

        Unless required by applicable law or agreed to in writing, software
        distributed under the License is distributed on an "AS IS" BASIS,
        WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
        See the License for the specific language governing permissions and
        limitations under the License.
*/

syntax = "proto3";

package alcor.schema;

option java_package = "com.futurewei.alcor.schema";
option java_outer_classname = "Port";

import "common.proto";

enum MessageType { 
    DELTA = 0; // the default type
    FULL = 1;
}

message PortConfiguration {
    uint32 format_version = 1;
    uint32 revision_number = 2;
    MessageType message_type = 3;

    string id = 4;
    string project_id = 5;
    string vpc_id = 6;
    string name = 7;
    string network_ns = 8;
    string mac_address = 9;
    bool admin_state_up = 10;

    message HostInfo {
        string ip_address = 1;
        string mac_address = 2;
    }

    message FixedIp {
        string subnet_id = 1;
        string ip_address = 2;
    }

    message AllowAddressPair {
        string ip_address = 1;
        string mac_address = 2;
    }

    message SecurityGroupId {
        string id = 1;
    }

    HostInfo host_info = 11;
    repeated FixedIp fixed_ips = 12;
    repeated AllowAddressPair allow_address_pairs = 13;
    repeated SecurityGroupId security_group_ids = 14;

    // start Mizar specific session
    string veth_name = 16;
    // end Mizar specific session
}

message PortState {
    OperationType operation_type = 1;
    PortConfiguration configuration = 2;
}
